@@ -1,3 +1,12 @@
+2019-03-16  Diego Pino Garcia  <dpino@igalia.com>
+
+        [GTK] [WPE] Fix compilation errors due to undefined ALWAYS_LOG_IF
+        https://bugs.webkit.org/show_bug.cgi?id=195850
+
+        Unreviewed build fix after r243033. 
+
+        * wtf/LoggerHelper.h:
+
 2019-03-15  Per Arne Vollan  <pvollan@apple.com>
 
         [iOS] Block the accessibility server when accessibility is not enabled.
